@@ -5,7 +5,8 @@
 # Started: Sun Jan 16 16:21:24 2005
 
 use strict;
-my $cmd = "moat -d 10 -c 120 -r 120 -t 120 -a 120 -s -g";
+my $args = join ' ', @ARGV;
+my $cmd = "moat -d 10 -c 120 -r 120 -t 120 -a 120 -s -g $args";
 print "$cmd\n";
 exec $cmd;
 __END__
