@@ -1,6 +1,16 @@
 MOAT test scripts
 John Jacobsen jacobsen@npxdesigns.com
 
+V00-02-06  9/27/06
+
+ Issue    Fix/upgrade
+0000741: add options to moat to make MJB test only upper or lower half of string
+0000740: fix shortmoat and moat14 to accept CWD arguments (e.g., 'shortmoat 00a 01b')
+0000745: get moat -k to kill mjb subprocesses correctly
+0000744: allow for setting of mjb duration in moat
+
+============================================================================
+
 V00-02-05  3/31/06
 Requires: domhub-tools 201 or greater
 - Don't bail in se.pl if open fails on one of the /dev files
